tests/expectations/compiler/statements/assign_ternary.out
Error [ETYC0372117]: Expected type `bool` but type `u32` was found.
    --> compiler-test:3:26
     |
   3 |     let x: bool = true ? y: true;
     |                          ^
Error [ETYC0372118]: Received different types `u32` and `bool` for the arms of a ternary conditional.
    --> compiler-test:3:19
     |
   3 |     let x: bool = true ? y: true;
     |                   ^^^^^^^^^^^^^^
     |
     = Make both branches the same type.
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
